--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "shelljs": "^0.8.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "types-for-adobe": "github:ten-A/types-for-adobe",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.0.5"
