--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "^3.7.95",
     "core-js": "^2.6.5",
     "lottie-web": "^5.5.6",
+    "starlette": "^0.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5"
